los-salesforce-project/force-app/main/default/objects/LOS_Loan__c/LOS_Loan__c.object-meta.xml
<CustomObject>
    <description>A commercial loan from application through closing and servicing. Box holds the governed loan file; this record holds the structured terms the bank underwrites against.</description>
    <label>Loan</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>