los-salesforce-project/force-app/main/default/objects/LOS_Loan__c/fields/Applicant_Email__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Email__c</fullName>
    <description>Email of the person who submitted the application on the borrower's behalf, usually the borrower's finance lead. Matched by the email intake handler to a Contact.</description>
    <label>Applicant Email</label>
    <type>Email</type>
</CustomField>