los-salesforce-project/force-app/main/default/objects/LOS_Loan__c/fields/Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Name__c</fullName>
    <description>Name of the person who submitted the application on the borrower's behalf.</description>
    <label>Applicant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>