los-salesforce-project/force-app/main/default/objects/LOS_Loan__c/fields/Borrower__c.field-meta.xml
<CustomField>
    <fullName>Borrower__c</fullName>
    <description>Borrower name as it appears on the application. Display only; Borrower_Account__c is the relationship and the access boundary.</description>
    <label>Borrower</label>
    <length>255</length>
    <type>Text</type>
</CustomField>