los-salesforce-project/force-app/main/default/objects/LOS_Loan__c/fields/Borrower_Account__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Account__c</fullName>
    <description>The borrower's Account. This is the anchor for record access: the LOS_Borrower_Access sharing set matches it against the account behind a portal user's Contact, so a borrower sees exactly the loans on their own account.</description>
    <label>Borrower</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Borrower Loans</relationshipLabel>
    <relationshipName>Borrower_Loans</relationshipName>
    <type>Lookup</type>
</CustomField>