los-salesforce-project/force-app/main/default/objects/LOS_Loan__c/fields/Borrower_Entity__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Entity__c</fullName>
    <description>The legal entity that signs, where a borrower borrows through a subsidiary. Access still hangs off Borrower_Account__c: a sharing set matches a Contact to one Account and does not walk a hierarchy, so child Accounts would hide loans from their signers.</description>
    <inlineHelpText>Borrowing entity, where the borrower borrows through a subsidiary or holding company. Leave empty when the parent borrows directly.</inlineHelpText>
    <label>Borrowing Entity</label>
    <length>120</length>
    <type>Text</type>
</CustomField>