los-salesforce-project/force-app/main/default/objects/LOS_Loan__c/fields/Box_Workspace_Folder_ID__c.field-meta.xml
<CustomField>
    <fullName>Box_Workspace_Folder_ID__c</fullName>
    <description>Denormalised copy of the Box for Salesforce folder association for this loan's governed folder. Read as a fallback when box__FRUP__c is unavailable to the caller, so losing the association lookup does not cost the answer.</description>
    <inlineHelpText>Box folder ID of the loan file. Normally set from the Box for Salesforce association; edit only when that association is missing.</inlineHelpText>
    <label>Box Workspace Folder ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>