los-salesforce-project/force-app/main/default/objects/LOS_Loan__c/fields/Collateral_Type__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Type__c</fullName>
    <description>Primary collateral securing the loan. Real estate collateral routes the deal to Collateral Review under the credit approval matrix.</description>
    <label>Collateral Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>None</fullName><default>true</default><label>None</label></value>
            <value><fullName>Real Estate</fullName><default>false</default><label>Real Estate</label></value>
            <value><fullName>Equipment</fullName><default>false</default><label>Equipment</label></value>
            <value><fullName>Receivables</fullName><default>false</default><label>Receivables</label></value>
            <value><fullName>Cash and Securities</fullName><default>false</default><label>Cash and Securities</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>