los-salesforce-project/force-app/main/default/objects/LOS_Loan__c/fields/Collateral_Value__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Value__c</fullName>
    <description>Appraised collateral value from a bank-ordered appraisal, not the borrower-stated figure. LTV is measured against this, which is why the two can disagree: the 2026 Dockwright application states $6,000,000 and the appraisal came in at $5,650,000.</description>
    <inlineHelpText>Appraised collateral value. Use the bank-ordered appraisal, not the borrower-stated figure.</inlineHelpText>
    <label>Collateral Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>