los-salesforce-project/force-app/main/default/objects/LOS_Loan__c/fields/DSCR__c.field-meta.xml
<CustomField>
    <fullName>DSCR__c</fullName>
    <description>Debt service coverage ratio: net operating income over annual debt service, as a multiple (1.25 means 1.25x). LOS-DSCR-001 requires at least 1.25x; the approved exception LOS-DSCR-002 allows 1.15x with a cash reserve. Below that is a Credit Risk decision.</description>
    <inlineHelpText>NOI over annual debt service, as a multiple. Policy minimum 1.25x (LOS-DSCR-001).</inlineHelpText>
    <label>Debt Service Coverage</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>