los-salesforce-project/force-app/main/default/objects/LOS_Loan__c/fields/Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate__c</fullName>
    <description>Annual interest rate as a percentage (6.85 means 6.85%). Pricing policy LOS-RATE-001 sets the floor; anything below it is a Pricing Committee decision.</description>
    <inlineHelpText>Annual rate as a percentage, for example 6.85.</inlineHelpText>
    <label>Interest Rate</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>