los-salesforce-project/force-app/main/default/objects/LOS_Loan__c/fields/Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amount__c</fullName>
    <description>Principal amount requested, and once approved, committed. Amounts above $2,500,000 route to Credit Committee under the credit approval matrix.</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>