los-salesforce-project/force-app/main/default/objects/LOS_Loan__c/fields/Loan_ID__c.field-meta.xml
<CustomField>
    <fullName>Loan_ID__c</fullName>
    <description>Stable loan identifier, for example LN-2026-0042, supplied by validated Box intake and used for idempotent upsert. It is the reference a person uses in conversation and the key every governed action resolves a loan by.</description>
    <externalId>true</externalId>
    <label>Loan ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>