los-salesforce-project/force-app/main/default/objects/LOS_Loan__c/fields/Loan_Officer__c.field-meta.xml
<CustomField>
    <fullName>Loan_Officer__c</fullName>
    <description>The commercial loan officer working the deal.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Officer</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Assigned Loans</relationshipLabel>
    <relationshipName>Owned_LOS_Loans</relationshipName>
    <type>Lookup</type>
</CustomField>