los-salesforce-project/force-app/main/default/objects/LOS_Loan__c/fields/Loan_Officer_Name__c.field-meta.xml
<CustomField>
    <fullName>Loan_Officer_Name__c</fullName>
    <description>Loan officer name from validated intake, retained when no active Salesforce User is explicitly resolved into Loan_Officer__c.</description>
    <label>Loan Officer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>