los-salesforce-project/force-app/main/default/objects/LOS_Loan__c/fields/LTV__c.field-meta.xml
<CustomField>
    <fullName>LTV__c</fullName>
    <description>Loan-to-value as a percentage of appraised collateral value (85 means 85%). LOS-LTV-001 caps owner-occupied commercial real estate at 75%; the approved exception LOS-LTV-002 allows 80% with an interest reserve and an additional guaranty.</description>
    <inlineHelpText>Loan amount over appraised collateral value, as a percentage. Policy maximum 75% (LOS-LTV-001).</inlineHelpText>
    <label>Loan-to-Value</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>