los-salesforce-project/force-app/main/default/objects/LOS_Loan__c/fields/Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Date__c</fullName>
    <description>When the loan matures, and the date covenant review and maturity notices are measured back from. Empty until the loan closes: a loan still in underwriting has no term running, and a date here would imply one had been agreed.</description>
    <inlineHelpText>Maturity date. Leave empty until the loan is closed.</inlineHelpText>
    <label>Maturity Date</label>
    <type>Date</type>
</CustomField>