los-salesforce-project/force-app/main/default/objects/LOS_Loan__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>The Opportunity the loan was originated from. Opportunity is the Box-mapped object, so this is where the loan file's Box folder hangs when the loan record has none of its own.</description>
    <label>Opportunity</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Loan Opportunities</relationshipLabel>
    <relationshipName>Loan_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>