los-salesforce-project/force-app/main/default/objects/LOS_Loan__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <description>What the borrower says the loan is for, in their own words, captured when they start the application in the borrower portal. The loan officer reads it; nothing derives from it.</description>
    <inlineHelpText>The purpose of the loan as the borrower stated it on their application.</inlineHelpText>
    <label>Purpose</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>