los-salesforce-project/force-app/main/default/objects/LOS_Loan__c/fields/Record_Source__c.field-meta.xml
<CustomField>
    <fullName>Record_Source__c</fullName>
    <description>How the loan record came to exist: created by the Box Automate intake workflow, entered by hand, or upserted through the REST API.</description>
    <label>Record Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Box Automate</fullName><default>true</default><label>Box Automate</label></value>
            <value><fullName>Manual</fullName><default>false</default><label>Manual</label></value>
            <value><fullName>API</fullName><default>false</default><label>API</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>