los-salesforce-project/force-app/main/default/objects/LOS_Loan__c/fields/Sign_Embed_URL__c.field-meta.xml
<CustomField>
    <fullName>Sign_Embed_URL__c</fullName>
    <description>Box Sign embed URL for borrower to sign documents in-app</description>
    <label>Sign Embed URL</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>