los-salesforce-project/force-app/main/default/objects/LOS_Loan__c/fields/Sign_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>Sign_Request_ID__c</fullName>
    <description>Current Box request reference retained independently of the expiring signer URL.</description>
    <label>Sign Request ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>