los-salesforce-project/force-app/main/default/objects/LOS_Loan__c/fields/Signing_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Signing_Receipt__c</fullName>
    <description>Server-owned Box-confirmed signing artifacts, keyed by file ID. Not editable by borrowers.</description>
    <label>Signing Receipt</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>