los-salesforce-project/force-app/main/default/objects/LOS_Loan__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Where the loan is in origination. Signature preparation is refused by Apex unless the loan is Approved or Commitment; term write-back is refused once it is Closed or Servicing.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Application</fullName><default>true</default><label>Application</label></value>
            <value><fullName>Underwriting</fullName><default>false</default><label>Underwriting</label></value>
            <value><fullName>Credit Review</fullName><default>false</default><label>Credit Review</label></value>
            <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
            <value><fullName>Commitment</fullName><default>false</default><label>Commitment</label></value>
            <value><fullName>Closed</fullName><default>false</default><label>Closed</label></value>
            <value><fullName>Servicing</fullName><default>false</default><label>Servicing</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>