los-salesforce-project/force-app/main/default/objects/LOS_Loan__c/fields/Target_Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Closing_Date__c</fullName>
    <description>The closing date the deal team is working toward. Drives the forecast quarter; an unresolved policy exception is what pushes it.</description>
    <label>Target Closing Date</label>
    <type>Date</type>
</CustomField>