los-salesforce-project/force-app/main/default/objects/LOS_Loan__c/fields/Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Term_Months__c</fullName>
    <description>Loan term in months. Maturity_Date__c is set from closing plus this term once the loan closes.</description>
    <label>Term Months</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>