los-salesforce-project/force-app/main/default/objects/LOS_Loan__c/fields/Underwriting_Notes__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_Notes__c</fullName>
    <description>The underwriter's notes: policy exceptions, conditions of approval, covenant observations. Internal, and withheld from the borrower portal.</description>
    <label>Underwriting Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>