los-salesforce-project/force-app/main/default/objects/LOS_Loan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Loan_ID__c</columns>
    <columns>Borrower__c</columns>
    <columns>Loan_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Risk_Rating__c</columns>
    <columns>Target_Closing_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Loans</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>